--- a/Classifiy_Reviews1.ipynb
+++ b/Classifiy_Reviews1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7xEbGvReFSVzgHxDNpdHo",
+      "authorship_tag": "ABX9TyN91Qm+BZx/W2pBsk2IvU7a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,9 +45,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JjMSKd9t6_Zt",
-        "outputId": "13df0d53-ec8a-4921-d3f9-f3c9eed26d45"
+        "outputId": "0cd3a77e-2a3b-4236-8756-db70a2fe7fb9"
       },
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,13 +61,39 @@
     {
       "cell_type": "code",
       "source": [
-        "%env NLTK_DATA={IMPORT_PATH_SYMLINK['link']}\n",
+        " %env NLTK_DATA={IMPORT_PATH_SYMLINK['link']}\n",
         "!pip install --target={IMPORT_PATH_SYMLINK['link']} contractions\n",
         "!python -m textblob.download_corpora\n",
-        "!pip install --target={IMPORT_PATH_SYMLINK['link']} autocorrect"
+        "!pip install --target={IMPORT_PATH_SYMLINK['link']} autocorrect\n",
+        "!python -m textblob.download_corpora"
       ],
       "metadata": {
         "id": "qSecUzjX5o1z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('averaged_perceptron_tagger')\n",
+        ""
+      ],
+      "metadata": {
+        "id": "DVb4LNVm-Xz8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nltk.download('wordnet')"
+      ],
+      "metadata": {
+        "id": "3ZyjS90U_aty"
       },
       "execution_count": null,
       "outputs": []
@@ -108,7 +134,7 @@
       "metadata": {
         "id": "-emV-8yLdmvi"
       },
-      "execution_count": 7,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -119,8 +145,34 @@
       "metadata": {
         "id": "-qbyfE_gfanP"
       },
-      "execution_count": 8,
+      "execution_count": 42,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(data_train), data_train.keys()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kuTnHGPw95Wi",
+        "outputId": "eaf2f1cb-3d47-4574-cbb5-2b69749017d2"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(dict, dict_keys([4, 3, 2, 5, 1]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -130,12 +182,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 35
         },
         "id": "UgSQ3LHkgFnS",
-        "outputId": "7a7e3542-8745-4b7e-fc99-3d7fa606e11b"
+        "outputId": "2f90cd64-2bb6-4fdc-96ef-50c5b7c94328"
       },
-      "execution_count": 9,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +200,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 44
         }
       ]
     },
@@ -157,13 +209,13 @@
       "source": [
         "import contractions\n",
         "for x,y in contractions.contractions_dict.items():\n",
-        "    x =x.replace(\"'\", ' ')\n",
+        "    x = x.replace(\"'\", ' ')\n",
         "    contractions.add(x, y)"
       ],
       "metadata": {
         "id": "sxGSWzUUgKEy"
       },
-      "execution_count": 6,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -175,7 +227,7 @@
       "metadata": {
         "id": "bozOCBpyQD40"
       },
-      "execution_count": 7,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -188,7 +240,7 @@
       "metadata": {
         "id": "-whRjI5nhd0d"
       },
-      "execution_count": 8,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -196,46 +248,9 @@
       "source": [
         "PUNCT = re.compile(r'[{}\\d_\\n]'.format(re.escape(string.punctuation)))\n",
         "\n",
-        "def tag_and_normalize(text, cond = lambda x: True, stopwords = ()):\n",
-        "    '''returns normalized text\n",
-        "      - removes contractions,\n",
-        "      - removes punctuation and numbers and _\n",
-        "      - spellchecks the word\n",
-        "      - lemmatazies the word depending on its part of speech\n",
-        "        for all words with a tag so that cond(tag) is True\n",
-        "\n",
-        "      cond: function f(tag) -> bool\n",
-        "    '''\n",
-        "    # tagged words\n",
-        "    words = []\n",
-        "    tt = {'J': 'a', 'R': 'a', 'V':'v', 'N': 'n'}\n",
-        "\n",
-        "    text = contractions.fix(text)\n",
-        "    text = PUNCT.sub(' ', text)\n",
-        "    tb = TextBlob(text).lower().correct()\n",
-        "\n",
-        "    for word, tag in tb.tags:\n",
-        "        if word in  stopwords:\n",
-        "            continue\n",
-        "\n",
-        "\n",
-        "        # only keek adj, adv, and past participes like broken,\n",
-        "        # advertized, cleaned,... or gerund, i.e. smelling, working, bothering,...\n",
-        "        if cond(tag):\n",
-        "            word = word.lemmatize(tt.get(tag[0]))\n",
-        "            words.append((word, tag))\n",
-        "\n",
-        "\n",
-        "    return words\n",
-        "\n",
-        "\n",
         "def normalize(text):\n",
         "    text = contractions.fix(text)\n",
         "    text = PUNCT.sub(' ', text)\n",
-        "    # tb = TextBlob(text).lower().correct()\n",
-        "    # tb.raw\n",
-        "    #text = spell(text)\n",
-        "    #return TextBlob(text).lower().correct().raw\n",
         "    return spell(text)\n",
         "\n",
         "def clean_reviews(review_dict):\n",
@@ -246,7 +261,7 @@
       "metadata": {
         "id": "yPcHAWgkhe8E"
       },
-      "execution_count": 9,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -262,13 +277,13 @@
       "metadata": {
         "id": "Xdlbmkv_h8gd"
       },
-      "execution_count": 16,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "normalize('got? no wi fi or wifi')"
+        "normalize('COuldn\\'t se a ting')"
       ],
       "metadata": {
         "colab": {
@@ -276,48 +291,22 @@
           "height": 35
         },
         "id": "_NDMDXGdhTw2",
-        "outputId": "fae1f842-2d25-44e5-d22d-66fa95f09ed3"
+        "outputId": "b0368051-853f-4d0f-c9ba-88cadb021c2e"
       },
-      "execution_count": 63,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'got  no wi fi or wifi'"
+              "'could not se a ting'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 63
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "res[3][1]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hGudiuKima1P",
-        "outputId": "373eb95a-1dc9-4635-a22f-fb643973198e"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "('desirable', 'JJ')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
+          "execution_count": 53
         }
       ]
     },
@@ -329,30 +318,73 @@
       "metadata": {
         "id": "R-GTKzc_4e6Y"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "train_test = (data_train_clean, data_test_clean)"
+        "data_train_clean.keys()"
       ],
       "metadata": {
-        "id": "JRGpXtWbc0pa"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Py5xy7ENXAzw",
+        "outputId": "de26beb1-8864-49f5-ce8f-52b1c521b102"
       },
-      "execution_count": 73,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys([4, 3, 2, 5, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_train_clean[3][:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "samCcPXla049",
+        "outputId": "d2f6827a-2c18-40f3-f659-853dc70f8b7f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['the room is starting to look slightly tired reception was noisy and not particularly attractive did not bother visiting restaurant because of this   bed and sheets very good kitchenette very handy and there is extra space in fridge for your own things',\n",
+              " 'i booked in via booking com the mix up began when i arrived at the hotel the room was too small and then i was told i can have an upgrade this did not happen the lack of clarity and mix ups no gt in a     room hotel front office manager takes care things poorly no fridge to is minuscule inside drawer are dirty  breakfast was okay cleanliness in rooms is good lobby is dated all staff are all spanish why is there no english person working for a hotel in london swimming pool is okay the english theme of henry iii is all that is left of the english breakfast staff are nice and clean location is easy to get to the city and a   area restaurants are not the best best to go the westbound for high end',\n",
+              " 'looked breakfast a bit bland flavourless and sticky table tops some of the fixtures and fittings a bit tired   room with a view was excellent personal touches on arrival']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "#  with open(ROOT + 'data/hotelreviews_cleaned_train_test_spell.pkl','wb') as f:\n",
-        "#     pickle.dump(train_test,f)"
+        "#     pickle.dump((data_train_clean, data_test_clean),f)"
       ],
       "metadata": {
         "id": "ZBs9ZhFDPAGP"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,8 +396,36 @@
       "metadata": {
         "id": "Yw_kn_VGeEcS"
       },
-      "execution_count": 75,
+      "execution_count": 57,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_test[0][3][:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cgWZFd4Ab2zZ",
+        "outputId": "7b16465d-b133-42d1-f656-2b42db62c31e"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['the room is starting to look slightly tired reception was noisy and not particularly attractive did not bother visiting restaurant because of this   bed and sheets very good kitchenette very handy and there is extra space in fridge for your own things',\n",
+              " 'i booked in via booking com the mix up began when i arrived at the hotel the room was too small and then i was told i can have an upgrade this did not happen the lack of clarity and mix ups no gt in a     room hotel front office manager takes care things poorly no fridge to is minuscule inside drawer are dirty  breakfast was okay cleanliness in rooms is good lobby is dated all staff are all spanish why is there no english person working for a hotel in london swimming pool is okay the english theme of henry iii is all that is left of the english breakfast staff are nice and clean location is easy to get to the city and a   area restaurants are not the best best to go the westbound for high end',\n",
+              " 'looked breakfast a bit bland flavourless and sticky table tops some of the fixtures and fittings a bit tired   room with a view was excellent personal touches on arrival']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -376,7 +436,7 @@
       "metadata": {
         "id": "rUKIH8rpeuFA"
       },
-      "execution_count": 76,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -389,9 +449,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rlm2YU6Uf2TR",
-        "outputId": "90abdc86-d778-4ef4-c7ac-ddc569c4c0bb"
+        "outputId": "1e41bb23-d05d-4d21-c753-caf89a0cdc5b"
       },
-      "execution_count": 77,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,33 +464,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 77
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "TextBlob(' got not wi fi').correct()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TNkuc_GAf6Tr",
-        "outputId": "b8d077b4-260c-4ba1-f9b4-d6a3f1e319ac"
-      },
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "TextBlob(\" got not i i\")"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 59
+          "execution_count": 60
         }
       ]
     },
@@ -462,9 +496,9 @@
           "height": 499
         },
         "id": "rUFUXBlMgg9B",
-        "outputId": "aaa2f7c2-d1f1-4c68-c021-3cb91c85faa7"
+        "outputId": "f57463b3-c3f7-4ad8-dc5d-6ccf250b2c7c"
       },
-      "execution_count": 79,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +508,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 61
         },
         {
           "output_type": "display_data",
